# AutomationChallenge

./: automation.md
laser_program_generator/: .gitignore  README.md  notes.md  pyproject.toml
laser_program_generator/laser_program_generator/: main.py
laser_program_generator/tests/: test_laser_program_generator.py  test_main.py
