[tool.poetry]
name = "laser_program_generator"
version = "0.1.0"
description = ""
authors = ["Joshua Dyer <dyerjo@mail.gvsu.edu>"]
readme = "README.md"

[tool.poetry.scripts]
laser-program-generator = "laser_program_generator.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
